--- a/src/app/Components/sobrenosotros/sobrenosotros.component.html
+++ b/src/app/Components/sobrenosotros/sobrenosotros.component.html
@@ -8,11 +8,11 @@
     
 </head>
 <body>
-    <p>&nbsp;</p>
+    <h1>&nbsp;</h1>
 <div class="container">
     <section class="content content-all">
 
-        <a id="main-content"></a>
+    <a id="main-content"></a>
 <div class="region region-content">
 <h1 class="page-header">
 <span property="schema:name">CafePas</span>
@@ -27,7 +27,7 @@
 <div property="schema:text" class="field field--name-body field--type-text-with-summary field--label-hidden field--item"><p><img alt="" src="../../img/LogoCafepas.jpg" align="left"></p>
     <img alt="cafepas" src="../../../assets/img/taza.jpg" width="400" height="300" align="left">
 <h3></h3>
-<div align=justify>
+<div class="txt">
 <p> La empresa Cafepas S A S se encuentra ubicada en la localidad de TULUA, en el departamento de VALLE. El domicilio social de esta empresa es CALLE 50 40 81 BODEGA A1 DEL PARQUE INDUSTRIAL JACOB, TULUA, VALLE.
     
     La forma jurídica de Cafepas S A S es SOCIEDAD POR ACCIONES SIMPLIFICADA y su principal actividad es "Comercio al por mayor de productos alimenticios". </p>
@@ -78,10 +78,10 @@
 <p><img alt="mi-planeta" src="../../../assets/img/cuidadomedio.jpg" loading="lazy" width="500" height="400" align="left"></p>
 </div>
 
-<div class="container-fluid">
+<div class="txt">
 <h2>Mi Planeta</h2>
 
-<p align="ringht">Trabajamos para reducir, mitigar y compensar los impactos de la operación en el planeta, así como para contribuir a la generación de consciencia ambiental en los diferentes grupos de interés.</p>
+<p>Trabajamos para reducir, mitigar y compensar los impactos de la operación en el planeta, así como para contribuir a la generación de consciencia ambiental en los diferentes grupos de interés.</p>
 
 <p>Trabajamos para reducir, mitigar y compensar nuestro impacto en el planeta. Para lograrlo, trabajamos en estos frentes:</p>
 
@@ -130,7 +130,7 @@
 
 <p><img alt="somos-Integros%20%281%29" src="../../../assets/img/integros.jpg" loading="lazy" width="500" height="400" align="left"></p>
 
-<div class="container" align="justify">
+<div class="txt">
 <h2>Somos íntegros</h2>
 
 <p>&nbsp;</p>
@@ -151,8 +151,6 @@
 </div>
 
 </div>
-
-
 
 </div>
 <p>&nbsp;</p>
