--- a/src/app/Components/alimentos/alimentos.component.html
+++ b/src/app/Components/alimentos/alimentos.component.html
@@ -12,11 +12,10 @@
     <div class="col">
       <div class="card h-100">
         <img src="../../../assets/img/productoarrozppal.jpg" class="card-img-top" width="100" height="200" alt="">
-        <div class="card-body" click="Alimentos()">
+        <div class="card-body" click="Arroz()">
           <h5 class="card-title">Arroz</h5>
           <p class="card-text">Arroz en diferentes marcas</p>
-          <a ref=""  class="btn btn-primary" >VER</a>
-          
+          <a class="btn btn-primary" (click)="Arroz()">VER</a>       
         </div>
         <div class="card-footer">
           <small class="text-muted">Last updated 3 mins ago</small>
@@ -29,7 +28,7 @@
         <div class="card-body">
           <h5 class="card-title">Granos</h5>
           <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-          <a href="#" class="btn btn-primary">VER</a>
+          <a class="btn btn-primary" (click)="Arroz()">VER</a>
         </div>
         <div class="card-footer">
           <small class="text-muted">Last updated 3 mins ago</small>
@@ -41,6 +40,48 @@
         <img src="../../../assets/img/Granos-de-cafe-tostados.jpg" class="card-img-top" width="100" height="200" alt="">
         <div class="card-body">
           <h5 class="card-title">Café</h5>
+          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+          <a href="#" class="btn btn-primary">VER</a>
+        </div>
+        <div class="card-footer">
+          <small class="text-muted">Last updated 3 mins ago</small>
+        </div>
+      </div>
+    </div>
+
+    <div class="col">
+      <div class="card h-100">
+        <img src="../../../assets/img/aceite.jpg" class="card-img-top" width="100" height="200" alt="">
+        <div class="card-body">
+          <h5 class="card-title">Aceites</h5>
+          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+          <a href="#" class="btn btn-primary">VER</a>
+        </div>
+        <div class="card-footer">
+          <small class="text-muted">Last updated 3 mins ago</small>
+        </div>
+      </div>
+    </div>
+
+    <div class="col">
+      <div class="card h-100">
+        <img src="../../../assets/img/enlatados.jpg" class="card-img-top" width="100" height="200" alt="">
+        <div class="card-body">
+          <h5 class="card-title">Enlatados</h5>
+          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+          <a href="#" class="btn btn-primary">VER</a>
+        </div>
+        <div class="card-footer">
+          <small class="text-muted">Last updated 3 mins ago</small>
+        </div>
+      </div>
+    </div>
+
+    <div class="col">
+      <div class="card h-100">
+        <img src="../../../assets/img/pastas.jpg" class="card-img-top" width="100" height="200" alt="">
+        <div class="card-body">
+          <h5 class="card-title">Pastas</h5>
           <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
           <a href="#" class="btn btn-primary">VER</a>
         </div>
